# MySqlClient

./: .gitignore  CMakeLists.txt  MySqlClient.cpp  README.md
docs/: portfolio_showcase.md
examples/: demo.sql
examples/jsondb/: users.json  users.schema.json
include/: MySqlClient.h  query_app.h
include/core/: sql_parser.h
include/database/: json_driver.h  sqlite_driver.h
include/file_sqlquery/: QueryType.h
include/file_sqlquery/core/: CsvDataSource.h  IDataSource.h  IQueryEngine.h  ISqlParser.h
include/file_sqlquery/model/: DataTable.h  QueryResult.h
include/input/: file_parser.h  input_console.h  input_file.h  input_manager.h  inputdata.h
src/: QueryResult.cpp  main.cpp  query_app.cpp
src/core/: sql_parser.cpp
src/database/: json_driver.cpp  sqlite_driver.cpp
src/datasource/: CsvDataSource.cpp
src/input/: file_parser.cpp  input_console.cpp  input_file.cpp  inputdata.cpp
src/model/: DataTable.cpp  QueryResult.cpp
testdb/: product.json  t.json  test.json
tests/: DataTable_test.cpp  QueryResult_test.cpp  test.csv  test_app_cli.cpp  test_console_input.cpp  test_driver.cpp  test_sql.sql  test_sqlite_driver.cpp  test_sqlquery_parser.cpp
